2005-01-16  Jan Schmidt  <thaytan@mad.scientist.com>

	* ext/swfdec/gstswfdec.c: (gst_swfdec_change_state):
	  Don't return state change success when the parent
	  failed.

2005-01-16  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* gst/avi/gstavimux.c: (gst_avimux_handle_event):
	  Free events (fix memleak in #162905).

2005-01-15  Gergely Nagy  <algernon@bonehunter.rulez.org>

	Reviewed by:  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* gst/ffmpegcolorspace/gstffmpegcodecmap.c:
	(gst_ffmpeg_caps_to_pixfmt):
	  Fix for depth = 15. Fixes #161675.

2005-01-14  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* sys/v4l/gstv4lsrc.c: (gst_v4lsrc_getcaps):
	  Set FPS correctly, even for webcams and the like.
	* sys/v4l/v4l_calls.c: (gst_v4l_set_chan_norm):
	  Don error on setting while capturing.

2005-01-14  Stephane LOEUILLET  <stephane.loeuillet@tiscali.fr>

	* ext/dv/gstdvdec.c:
	* gst/subparse/gstsubparse.c: (parse_mdvdsub):
	* gst/y4m/gsty4mencode.c: (gst_y4mencode_sinkconnect):
	  I'm a bad boy. using /1001. to force C to do float division
	  and not integer division (as it did in my last commit)
	  Thanks to David I. Lehn for pointing this mistake.

2005-01-14  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* sys/v4l/gstv4lelement.c: (gst_v4l_iface_supported):
	  Revert Johan´s 1.35->1.36 since it breaks compat.

2005-01-14  Stephane LOEUILLET  <stephane.loeuillet@tiscali.fr>

	* ext/dv/gstdvdec.c:
	* ext/libfame/gstlibfame.c:
	* gst/subparse/gstsubparse.c: (parse_mdvdsub):
	* gst/y4m/gsty4mencode.c: (gst_y4mencode_sinkconnect):
          replace framerate aproximations by their real value
          (24000/1001, 30000/1001, 60000/1001)
          Finish fixing bug #164049

2005-01-13  Thomas Vander Stichele  <thomas at apestaart dot org>

	* ext/ogg/gstoggmux.c:
	  eos/bos debugging
	* gst/tcp/gstmultifdsink.c:
	* gst/tcp/gstmultifdsink.h:
	* gst/tcp/gsttcp.c:
	* gst/tcp/gsttcp.h:
	* gst/tcp/gsttcpclientsink.c:
	* gst/tcp/gsttcpclientsrc.c: